@@ -1,3 +1,9 @@
+2001-02-28  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
+
+	* server-src/amadmin.c (info_one): typo.
+	* server-src/planner.c (setup_estimate): Don't re-ask for level 0
+	if last_level is 0 and FORCE_NO_BUMP is set.
+
 2001-02-27 John R. Jackson <jrj@purdue.edu>
 
 	* common-src/stream.h: Move DATABUF_SIZE to stream.h.
